[gd_scene load_steps=5 format=2]

[ext_resource path="res://PauseMenu/PauseBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://PauseMenu/PauseTravel.gd" type="Script" id=2]
[ext_resource path="res://MainMenu/MainUITheme.tres" type="Theme" id=3]
[ext_resource path="res://OnFootAssets/InsideShip/SpaceshipV2.png" type="Texture" id=4]

[node name="PauseTravel" instance=ExtResource( 1 )]
script = ExtResource( 2 )
zoom_max = 3.7
zoom_min = 0.5

[node name="VBoxContainer" parent="." index="8"]
mouse_filter = 0
custom_constants/separation = 10

[node name="MenuTitle" parent="VBoxContainer" index="0"]
text = "Travel Logs"

[node name="Container" type="Control" parent="VBoxContainer" index="1"]
margin_top = 53.0
margin_right = 600.0
margin_bottom = 453.0
mouse_filter = 1

[node name="GalaxyImageBorder" type="ColorRect" parent="VBoxContainer/Container" index="0"]
margin_left = -5.0
margin_top = -5.0
margin_right = 355.0
margin_bottom = 355.0
rect_min_size = Vector2( 360, 360 )
color = Color( 0.501961, 0, 0, 1 )

[node name="StarsBox" type="VBoxContainer" parent="VBoxContainer/Container" index="1"]
margin_left = 360.0
margin_right = 585.0
margin_bottom = 381.0

[node name="VisitedBox" type="VBoxContainer" parent="VBoxContainer/Container/StarsBox" index="0"]
margin_right = 225.0
margin_bottom = 202.0
rect_min_size = Vector2( 225, 175 )

[node name="Title" type="Label" parent="VBoxContainer/Container/StarsBox/VisitedBox" index="0"]
margin_right = 225.0
margin_bottom = 23.0
rect_min_size = Vector2( 225, 23 )
theme = ExtResource( 3 )
text = "Recently Visited"
align = 1
valign = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/Container/StarsBox/VisitedBox" index="1"]
margin_top = 27.0
margin_right = 225.0
margin_bottom = 202.0
rect_min_size = Vector2( 225, 175 )

[node name="LocationHolder" type="VBoxContainer" parent="VBoxContainer/Container/StarsBox/VisitedBox/ScrollContainer" index="0"]
margin_right = 225.0
rect_min_size = Vector2( 225, 0 )

[node name="BookmarkedBox" type="VBoxContainer" parent="VBoxContainer/Container/StarsBox" index="1"]
margin_top = 206.0
margin_right = 225.0
margin_bottom = 381.0
rect_min_size = Vector2( 225, 175 )

[node name="Title" type="Label" parent="VBoxContainer/Container/StarsBox/BookmarkedBox" index="0"]
margin_right = 225.0
margin_bottom = 23.0
rect_min_size = Vector2( 225, 23 )
theme = ExtResource( 3 )
text = "Bookmarked"
align = 1
valign = 1

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/Container/StarsBox/BookmarkedBox" index="1"]
margin_top = 27.0
margin_right = 225.0
margin_bottom = 152.0
rect_min_size = Vector2( 225, 125 )

[node name="LocationHolder" type="VBoxContainer" parent="VBoxContainer/Container/StarsBox/BookmarkedBox/ScrollContainer" index="0"]
margin_right = 225.0
margin_bottom = 125.0
rect_min_size = Vector2( 225, 125 )

[node name="ViewportContainer" type="ViewportContainer" parent="VBoxContainer/Container" index="2"]
margin_right = 350.0
margin_bottom = 350.0
rect_min_size = Vector2( 350, 350 )
rect_clip_content = true
mouse_filter = 2
stretch = true

[node name="Viewport" type="Viewport" parent="VBoxContainer/Container/ViewportContainer" index="0"]
size = Vector2( 350, 350 )
handle_input_locally = false
hdr = false
usage = 0
render_target_update_mode = 3

[node name="GalaxyImage" type="Sprite" parent="VBoxContainer/Container/ViewportContainer/Viewport" index="0"]
position = Vector2( 175, 175 )

[node name="CircleImage" type="Sprite" parent="VBoxContainer/Container/ViewportContainer/Viewport" index="1"]
position = Vector2( 175, 175 )

[node name="ShipImage" type="Sprite" parent="VBoxContainer/Container/ViewportContainer/Viewport" index="2"]
position = Vector2( 175, 175 )
texture = ExtResource( 4 )

[node name="Camera2D" type="Camera2D" parent="VBoxContainer/Container/ViewportContainer/Viewport" index="3"]
position = Vector2( 540, 540 )
current = true

[node name="MouseDetection" type="ColorRect" parent="VBoxContainer/Container" index="3"]
margin_right = 350.0
margin_bottom = 350.0
rect_min_size = Vector2( 350, 350 )
color = Color( 1, 1, 1, 0 )

[connection signal="mouse_entered" from="VBoxContainer/Container/MouseDetection" to="." method="_on_MouseDetection_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Container/MouseDetection" to="." method="_on_MouseDetection_mouse_exited"]
